2006-08-23  Rodney Dawes  <dobey@novell.com>

	* POTFILES.in: emblem-package.icon.in and emblem-web.icon.in were
	moved over to scalable, rather than 48x48

2006-08-22  Thierry Randrianiriana  <thierry@isvtec.com>

	* mg.po: Added Malagasy translation.
	* LINGUAS: Added 'mg'.

2006-08-20  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation, by
	         Christian Kintner <mail@christian-kintner.de>

2006-08-07  Ani Peter <peter.ani@gmail.com>

	* ml.po: Updated Malayalam Translation

2006-08-03  Subhransu Behera  <arya_subhransu@yahoo.co.in>

	* or.po: Added and Updated Oriya Translation.
	* LINGUAS: Added Oriya (or) to The List of Languages.

2006-08-02  Runa Bhattacharjee <runabh@gmail.com>

	* bn_IN.po: Updated Bengali India Translation.

2006-08-01  Jovan Naumovski  <jovan@lugola.net>

	* mk.po: Updated Macedonian translation.

2006-07-30  Christophe Merlet  <redfox@redfoxcenter.org>

	* fr.po: Updated French translation.

2006-07-10  Rodney Dawes  <dobey@novell.com>

	* POTFILES.in: Update for removed files

2006-07-03  Runa Bhattacharjee <runabh@gmail.com>

        * bn_IN.po: Added Bengali India Translation
        * LINGUAS: Added Bengali India (bn_IN) to the list of languages.

2006-06-26  Abel Cheung  <abel@oaka.org>

	* zh_HK.po, zh_TW.po: Updated traditional Chinese translation.

2006-05-15  Rodney Dawes  <dobey@novell.com>

	* LINGUAS: Add new LINGUAS file here to replace ALL_LINGUAS in configure.in

2006-04-26  Gora Mohanty  <gmohanty@cvs.gnome.org>

        * lv.po: Updated Latvian translation by
          Maris ZInbergs <maris.z@apollo.lv>

2006-03-26  Tommi Vainikainen  <thv@iki.fi>

	* dz.po: Added Dzongkha translation from Pema Geyleg.

2006-03-13  Vladimer Sichinava  <alinux@siena.linux.it>

        * ka.po: Added Georgian translation.

2006-03-06  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* ca.po: Updated Catalan translation.

2006-03-01  Ales Nyakhaychyk  <nab@mail.by>
