@@ -5,12 +5,8 @@
 [type: gettext/ini] 48x48/emblems/emblem-camera.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-certified.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-cool.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-cvs-added.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-cvs-conflict.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-cvs-controlled.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-cvs-modified.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-cvs-new-file.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-cvs-removed.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-cvs-sticky-tag.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-danger.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-desktop.icon.in
@@ -36,6 +32,9 @@
 [type: gettext/ini] 48x48/emblems/emblem-sound.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-trash.icon.in
 [type: gettext/ini] index.theme.in
+[type: gettext/ini] scalable/emblems/emblem-cvs-added.icon.in
+[type: gettext/ini] scalable/emblems/emblem-cvs-conflict.icon.in
+[type: gettext/ini] scalable/emblems/emblem-cvs-removed.icon.in
 [type: gettext/ini] scalable/emblems/emblem-favorite.icon.in
 [type: gettext/ini] scalable/emblems/emblem-generic.icon.in
 [type: gettext/ini] scalable/emblems/emblem-important.icon.in
