@@ -1,5 +1,10 @@
 2006-08-23  Rodney Dawes  <dobey@novell.com>
 
+	* POTFILES.in: Update for some of the cvs emblem icon files being
+	moved to scalable
+
+2006-08-23  Rodney Dawes  <dobey@novell.com>
+
 	* POTFILES.in: emblem-package.icon.in and emblem-web.icon.in were
 	moved over to scalable, rather than 48x48
 
